@@ -1,3 +1,9 @@
+2014-10-11  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/axis.c (copy_or_invent_formatstring): Lower end of axis may
+	need more precision in invented format than the distance between
+	max and min. Bug #1496
+
 2014-10-08 Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/save.c (save_all): Write out the filename last used for plotting.
